--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
@@ -16,6 +18,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy":"http://localhost:9000",
   "browserslist": [
     ">0.2%",
     "not dead",
