--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "nepal-safari",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lamsalbishal.github.io/nepal-safari/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
@@ -13,12 +15,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d src",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy":"http://localhost:9000",
+  "proxy": "http://localhost:9000",
   "browserslist": [
     ">0.2%",
     "not dead",
